[package]
name = "benten-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Orchestrator crate composing the Benten graph engine public API."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness so `cargo bench --workspace`
# passes Criterion CLI flags through without libtest rejecting them. See
# benten-core/Cargo.toml for the longer rationale.
bench = false

[features]
# Expose test-only helper methods on Engine (e.g.
# `test_subscribe_all_change_events`, `testing_insert_privileged_fixture`).
# The helpers are also available unconditionally under `cfg(test)`; this
# feature lights them up for integration tests under tests/ (which are
# compiled against the non-test library). See code-reviewer finding
# g7-cr-4.
#
# G11-A Wave 2a (CFG-GATING): `default = []` so release builds
# (`cargo check -p benten-engine --no-default-features`) do NOT
# compile the test-only surfaces listed under `test-helpers` — most
# importantly `engine_wait::testing_force_reregister_with_different_cid`
# and the `engine_wait::ENVELOPE_CACHE` + `cache_put` / `cache_get`
# helpers. CI workflows (`ci.yml`, `msrv.yml`, `phase-2a-exit-criteria.yml`,
# `cross-process-graph.yml`, `host-error-wire-safety.yml`) pass
# `--features benten-engine/test-helpers` alongside
# `--features benten-eval/testing` so the `cargo test` / `cargo nextest
# run` invocations continue to light the helpers up.
default = []
# Phase-2b G12-E (2026-04-27) — `envelope-cache-test-grade` RETIRED.
# The feature gated the test-grade `engine_wait::ENVELOPE_CACHE` static
# (a `LazyLock<Mutex<BTreeMap<Cid, ExecutionStateEnvelope>>>` with no
# durability). G12-E lands a real persistence layer
# (`benten_eval::SuspensionStore` + `crate::RedbSuspensionStore`); the
# napi cdylib + workspace tests now route through the durable store and
# the feature has nothing left to gate. Retired empty so any external
# consumer that named the feature gets a no-op rather than a hard
# Cargo error; remove next phase.
envelope-cache-test-grade = []
# G12-A: narrow feature that gates ONLY the
# `Engine::testing_set_iteration_budget` setter (consumed by the napi
# `bindings/napi/test/budget_exhausted_napi_round_trip.test.ts`
# integration test that exercises the runtime BudgetExhausted emission
# path through the JS surface). Splitting it off the broader
# `test-helpers` lets `bindings/napi/Cargo.toml` opt into the budget
# override without dragging the rest of the test-only API into the
# cdylib. `test-helpers` implies this feature so existing CI invocations
# keep working unchanged. Production cdylib consumers do NOT see this
# method unless they explicitly opt in.
iteration-budget-test-grade = []
test-helpers = ["envelope-cache-test-grade", "iteration-budget-test-grade"]
# Phase-2a R3's original `phase_2a_stubs` feature was removed at R4
# fix-pass (cov-1) — the R3 consolidation stubs made the gate obsolete
# for the 4 exit-gate composite files (wait_resume_determinism,
# inv_8_11_13_14_firing, arch_1_dep_break_verified, option_c_end_to_end).
# Those tests now compile and fail at `todo!()` panics carrying the
# owning R5 group pointer.
#
# `phase_2a_pending_apis` gates the WAIT-stack-inspection / closure-style
# DSL / `call_with_ticking_mono_clock` / `testing_reput_subgraph_as_user`
# test files (currently 8 across `tests/` + `tests/integration/`) whose
# bodies reach into APIs wider than the R3 consolidation stubs. R5 G2-B /
# G3-B / G9-A landed their respective APIs but the gate stayed because
# downstream R6 work that completes the WAIT-related test bodies is still
# pending.
#
# G12-C-cont (Phase 2b R6 A1 closure) addressed the original
# `SubgraphBuilder` arm of this gate by completing the type relocation
# from `benten-eval` to `benten-core` (see `crates/benten-core/src/
# subgraph.rs`). The WAIT / closure-DSL arms remain — so the feature
# stays. The next Phase-2b R6 wave can audit per-file and lapse the
# gate as the WAIT bodies fill in.
phase_2a_pending_apis = []
# G13-C wave-3 (Phase-3 R5; CLAUDE.md baked-in #17): re-points the
# default `Engine` alias to `EngineGeneric<BrowserBackend>` under this
# feature, so the napi cdylib's browser-target build (`cargo
# --target wasm32-unknown-unknown --features browser-backend
# --no-default-features`) consumes the in-RAM thin-client cache instead
# of `RedbBackend`. The alias is the only surface the feature flips —
# the generic cascade landed at G13-B accepts ANY `GraphBackend`
# implementor uniformly. Forwards to `benten-graph/browser-backend` so
# enabling the engine-side feature lights up the storage-side impl.
browser-backend = ["benten-graph/browser-backend"]

[dependencies]
benten-caps = { path = "../benten-caps" }
benten-core = { path = "../benten-core" }
benten-errors = { workspace = true }
benten-eval = { path = "../benten-eval", features = ["diag"] }
benten-graph = { path = "../benten-graph" }
benten-ivm = { path = "../benten-ivm" }
blake3 = { workspace = true }
# Phase-3 R5 wave-9 W9-T5 (§6.11) — workspace-level base64 codec for
# `manifest_signing.rs`. Replaces the previous ~80 LOC inline base64
# encoder/decoder (g14-c-mr-6 follow-up). `data-encoding::BASE64` matches
# RFC 4648 alphabet + padding so signatures round-trip identically to the
# previous inline impl.
data-encoding = { workspace = true }
thiserror = { workspace = true }
# Phase 2b G10-B — `ModuleManifest` canonical DAG-CBOR encoding (D9-RESOLVED).
# Production code paths (`Engine::install_module`, `Engine::compute_manifest_cid`)
# serialize manifests via serde_ipld_dagcbor, so these graduate from
# dev-deps to regular deps.
serde = { workspace = true, features = ["std"] }
serde_ipld_dagcbor = { workspace = true }

# R6FP-Group-1 (Round-2 Instance 8) — JSON-encoded structured-field bag
# for the napi error bridge. EngineError::context_json() returns
# serde_json::Value snapshots of per-variant fields (e.g.
# ModuleManifestCidMismatch.expected/computed/summary) so the napi
# adapter encodes them in the structured JSON envelope that engine_err
# emits per Phase-3 G19-B (supersedes the pre-G19-B `$$benten-context$$`
# suffix on the error message); the TS mapNativeError parses the
# JSON-shape carrier and populates BentenError.context. Adds ~30KB
# compiled; the alternative would be hand-written JSON serialisation
# of every diagnostic variant.
serde_json = { workspace = true }

# Phase 2b G7-A — `engine.toml` workspace-config parser. Reads at
# `Engine::open` time; failed parsing surfaces as `E_ENGINE_CONFIG_INVALID`.
# Per Ben's G7-A brief addition: deployment-level override of D24
# wallclock defaults (and future engine knobs). serde + serde derive
# wired through here for the EngineConfig schema; toml drives the
# workspace-root parse.
#
# Phase-2b G10-A-wasip1 (D10-RESOLVED): the snapshot-blob handoff API
# (`engine_snapshot.rs`) materializes the contents of a `SnapshotBlob`
# into a fresh tempdir-resident redb backend, then constructs an Engine
# over it (read-only via `read_only_snapshot` flag). The module is
# cfg-not-wasm32 (matches `engine_config.rs`); both `tempfile` and
# `serde_ipld_dagcbor` are needed at runtime, not just at test time, so
# they ride alongside `toml` here.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
toml = { workspace = true }
serde = { workspace = true }
# wsa-g7a-mr-4 fix-pass: emit a startup-warning when engine.toml relaxes
# the D24 built-in wallclock ceiling.
tracing = { workspace = true }
# G10-A-wasip1 snapshot-blob handoff (`engine_snapshot.rs`).
tempfile = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
# G14-C wave-4b — manifest-signing wire-through (Compromise #21).
# `benten-id` provides Ed25519 keypair + UCAN chain validation. The
# install_module path consults UCAN-proof-chain primary +
# publisher-key-registry fallback per D-PHASE-3-20 + crypto-minor-5.
# Native-only (with the rest of this section): `benten-id` transitively
# pulls `getrandom` for OS CSPRNG, which rejects `wasm32-unknown-unknown`
# without the `js` feature. The consuming module
# `crates/benten-engine/src/manifest_signing.rs` is already cfg-gated
# `cfg(not(feature = "browser-backend"))` per CLAUDE.md baked-in #17
# (manifest-signing is full-peer-only — thin clients fetch already-
# verified manifests from full peers). Mirrors the G13-C / G14-A1 /
# G14-B native-only-target-dep pattern.
benten-id = { path = "../benten-id" }
# Phase-3 G21-T1 — `typed_call_dispatch::build_seed_envelope` constructs
# the `{version, alg, secret_bytes: Bytes(32)}` DAG-CBOR envelope shape
# that `Keypair::from_dag_cbor_envelope` expects. `serde_bytes` keeps
# the `secret_bytes` field on CBOR major type 2 (byte string) so the
# round-trip is byte-identical with the `benten-id`-side encoder.
serde_bytes = { workspace = true }
# Phase-3 G21-T1 — typed-CALL `multibase_encode` / `multibase_decode`
# ops + `did_resolve` op. `bs58` provides base58btc encode/decode for
# the multibase `z` prefix (W3C did:key body); `data-encoding` (already
# in the workspace section above) provides RFC4648 base32/base64. The
# typed-CALL surface is full-peer-only per CLAUDE.md baked-in #16
# (crypto compute lives on full peers; thin clients fetch results) so
# bs58 lives in the native-target dependency section alongside the
# rest of the typed-CALL chain.
bs58 = { workspace = true }
# Phase-3 G21-T2 §D §2.5(a) sec-minor-2 closure — zeroize-on-drop
# wrapper for the seed envelope buffer constructed in
# `typed_call_dispatch::build_seed_envelope`. The buffer holds 32
# bytes of private-key seed material until the keypair envelope
# decode consumes it; wrapping in `zeroize::Zeroizing<Vec<u8>>`
# scrubs the buffer on Drop so a stale stack-spill / heap-fragment
# read can't leak it. Workspace dep already used by `benten-id`.
zeroize = { workspace = true }
# Phase-3 G16-B wave-6b — engine-side Atrium API surface
# (`engine_sync.rs` + `atrium_api.rs`) consumes the iroh transport core
# (G16-A) + Loro CRDT (G16-B) from `benten-sync`. Native-only per
# CLAUDE.md baked-in #17 — `benten-sync` itself is wasm32-rejected via
# its top-level `compile_error!`; here we cfg-gate the dep at the
# target-table layer so the dep chain is not even resolvable on wasm32.
# tokio + iroh ride alongside for the async Atrium API surface +
# `EndpointAddr` re-export at `sync_subgraph` arguments.
benten-sync = { path = "../benten-sync" }
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
] }
iroh = { version = "0.98", default-features = false, features = ["tls-ring"] }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
# Phase 2a R3 tests: proptest + serde + serde_ipld_dagcbor reach into the
# DAG-CBOR schema directly for tamper-injection paths (notably
# `resume_with_missing_attribution_triple_rejects` derives `Serialize`
# on a parallel "tampered" envelope shape).
proptest = { workspace = true }
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
# Phase 2b Wave-8b: SANDBOX integration test
# (`tests/sandbox_execute_via_engine_dispatch_invokes_executor.rs`)
# compiles a `(module (func (export "run") (result i32) ...))` WAT
# fixture inline + computes the BLAKE3 module-CID for
# `Engine::register_module_bytes`.
wat = { workspace = true }
blake3 = { workspace = true }

# Phase-3 G19-C2 wave-7 (§7.1) — SANDBOX execution-metrics propagation
# tests. The `describe_sandbox_node_for_handler` accessor lives behind
# `cfg(any(test, feature = "test-helpers"))` per Phase-2a sec-r6r2-02
# discipline; the integration test crate compiles separately from the
# library crate so the `cfg(test)` arm there is NOT visible to the lib.
# Pinning `required-features = ["test-helpers"]` opts the test in
# explicitly so the accessor symbol is present at link time.
[[test]]
name = "sandbox_metrics"
required-features = ["test-helpers"]

[[bench]]
name = "roundtrip"
harness = false

[[bench]]
name = "end_to_end_create"
harness = false

[[bench]]
name = "get_node_label_only_sub_1us"
harness = false

[[bench]]
name = "option_c_evaluator_path_overhead"
harness = false

[[bench]]
name = "subgraph_cache_hit"
harness = false

[[bench]]
name = "subgraph_cache_hit_80_20_mixed"
harness = false

[[bench]]
name = "change_event_fanout"
harness = false
