[package]
name = "benten-errors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stable error-catalog discriminants for the Benten graph engine. Root crate with zero deps on other workspace members."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness so `cargo bench --workspace`
# passes Criterion CLI flags through without libtest rejecting them. See
# benten-core/Cargo.toml for the longer rationale.
bench = false

[features]
default = []
# `phase_2b_landed` — see benten-eval/Cargo.toml for the rationale. Gates
# Phase-2b R3 red-phase test files that import error-catalog variants not
# yet landed (e.g. `ErrorCode::SandboxFuelExhausted`, `ErrorCode::StreamBackpressureDropped`).
phase_2b_landed = []

[dependencies]
# Intentionally no workspace dependencies — benten-errors sits at the
# root of the crate graph so any crate can depend on it without pulling
# benten-core or any other Benten surface. thiserror et al. belong in
# the consumers; this crate exposes a plain enum + string accessors only.

