[package]
name = "benten-errors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stable error-catalog discriminants for the Benten graph engine. Root crate with zero deps on other workspace members."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness so `cargo bench --workspace`
# passes Criterion CLI flags through without libtest rejecting them. See
# benten-core/Cargo.toml for the longer rationale.
bench = false

[features]
default = []

[dependencies]
# Intentionally no workspace dependencies — benten-errors sits at the
# root of the crate graph so any crate can depend on it without pulling
# benten-core or any other Benten surface. thiserror et al. belong in
# the consumers; this crate exposes a plain enum + string accessors only.

# Dev-only criterion bench harness (Fwd-1 #939 / #944). Gated off wasm
# targets to match the workspace pattern in benten-core/Cargo.toml — the
# benches are native-only catalog-hot-path baselines and the runtime
# crate stays zero-dependency.
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "catalog_baseline"
harness = false

