[package]
name = "benten-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Operation primitives and evaluator for the Benten graph engine (Phase 1 stub)."

[lints]
workspace = true

[dependencies]
benten-core = { path = "../benten-core" }
benten-graph = { path = "../benten-graph" }
benten-caps = { path = "../benten-caps" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
# Integration tests reach into `benten_engine::testing` helpers; see
# `read_denial.rs`, `requires_enforcement.rs`, etc. dev-deps can cycle
# safely because test binaries link as a separate compile unit.
benten-engine = { path = "../benten-engine" }

[[bench]]
name = "ten_node_handler"
harness = false
