[package]
name = "benten-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Operation primitives and evaluator for the Benten graph engine (Phase 1 stub)."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness so `cargo bench --workspace`
# passes Criterion CLI flags through without libtest rejecting them. See
# benten-core/Cargo.toml for the longer rationale.
bench = false

[features]
# `diag` gates `subgraph.to_mermaid()` + `engine.trace()`. Default off in
# `benten-eval` (keeps the thin-engine slim-build viable). `benten-engine`
# enables it via its own default feature list so every real user gets
# diagnostics; minimal embedders can opt out.
default = []
diag = []
# `testing` is one leg of the `cfg(any(test, debug_assertions, feature =
# "testing"))` gate on `register_test_callee` (G4-A mini-review C1). The
# MUTATION surface that seeds the Inv-8 TEST_CALLEE_REGISTRY must be
# unreachable in release builds (`debug_assertions = false`, feature not
# enabled). Downstream consumers that want the helper in a release-ish
# profile (e.g. an integration-test binary built under `--release`) must
# opt in by enabling this feature explicitly.
testing = []

[dependencies]
benten-core = { path = "../benten-core" }
benten-errors = { workspace = true }
# benten-graph intentionally absent — arch-1 dep-break (phil-r1-2 / plan §9.10 +
# §9.14). The evaluator reaches storage only through `PrimitiveHost`; backend-
# side failures surface through `HostError` (see `src/host_error.rs`), which
# carries an opaque `Box<dyn StdError>` source so no `benten-graph` type leaks
# into the `benten-eval` public surface. Enforced by:
#  - `tests/arch_1_no_graph_dep.rs` (this Cargo.toml)
#  - `tests/arch_1_no_graph_types_in_primitive_host.rs` (signature-level)
#  - `.github/workflows/arch-1-dep-break.yml` (CI gate)
benten-caps = { path = "../benten-caps" }
blake3 = { workspace = true }
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
# Integration tests reach into `benten_engine::testing` helpers; see
# `read_denial.rs`, `requires_enforcement.rs`, etc. dev-deps can cycle
# safely because test binaries link as a separate compile unit.
benten-engine = { path = "../benten-engine" }

[[bench]]
name = "ten_node_handler"
harness = false

[[bench]]
name = "multiplicative_budget_overhead"
harness = false

[[bench]]
name = "wait_suspend_resume_latency"
harness = false

[[bench]]
name = "transform_expression_latency"
harness = false
