[package]
name = "benten-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Operation primitives and evaluator for the Benten graph engine (Phase 1 stub)."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness so `cargo bench --workspace`
# passes Criterion CLI flags through without libtest rejecting them. See
# benten-core/Cargo.toml for the longer rationale.
bench = false

[features]
# `diag` gates `subgraph.to_mermaid()` + `engine.trace()`. Default off in
# `benten-eval` (keeps the thin-engine slim-build viable). `benten-engine`
# enables it via its own default feature list so every real user gets
# diagnostics; minimal embedders can opt out.
default = []
diag = []
# `testing` is one leg of the `cfg(any(test, debug_assertions, feature =
# "testing"))` gate on `register_test_callee` (G4-A mini-review C1). The
# MUTATION surface that seeds the Inv-8 TEST_CALLEE_REGISTRY must be
# unreachable in release builds (`debug_assertions = false`, feature not
# enabled). Downstream consumers that want the helper in a release-ish
# profile (e.g. an integration-test binary built under `--release`) must
# opt in by enabling this feature explicitly.
testing = []
# `phase_2b_landed` gates compilation of Phase 2b R3 red-phase test files
# whose `use` statements reference R5-pending APIs (`benten_eval::chunk_sink`,
# `benten_eval::sandbox`, `benten_eval::testing::testing_*`, etc.). Default
# OFF so the CI required-check fleet (which does NOT enable this feature)
# can compile + run the workspace cleanly during R3-consolidation. R5
# implementer briefs flip this on per-group as the referenced surfaces
# land. See `.addl/phase-2b/r3-consolidation.md` §4.
phase_2b_landed = []
# `component-model` is reserved per wsa-3 (Phase 2b removed wasmtime's
# component-model feature). The feature flag is declared here so R3 tests
# (`sandbox_escape_attempts_denied.rs` ESC-11 + ESC-12) can `#[cfg]`-gate
# Component-Model-specific escape vectors. Default OFF; never enabled in
# Phase 2b. R5 brief author flips on if/when wsa-3 reverses.
component-model = []

[dependencies]
benten-core = { path = "../benten-core" }
benten-errors = { workspace = true }
# benten-graph intentionally absent — arch-1 dep-break (phil-r1-2 / plan §9.10 +
# §9.14). The evaluator reaches storage only through `PrimitiveHost`; backend-
# side failures surface through `HostError` (see `src/host_error.rs`), which
# carries an opaque `Box<dyn StdError>` source so no `benten-graph` type leaks
# into the `benten-eval` public surface. Enforced by:
#  - `tests/arch_1_no_graph_dep.rs` (this Cargo.toml)
#  - `tests/arch_1_no_graph_types_in_primitive_host.rs` (signature-level)
#  - `.github/workflows/arch-1-dep-break.yml` (CI gate)
benten-caps = { path = "../benten-caps" }
blake3 = { workspace = true }
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
# Integration tests reach into `benten_engine::testing` helpers; see
# `read_denial.rs`, `requires_enforcement.rs`, etc. dev-deps can cycle
# safely because test binaries link as a separate compile unit.
#
# G11-A Wave 2a: `features = ["test-helpers"]` because the
# `test-helpers` default was flipped off on benten-engine; without this
# explicit opt-in the integration tests under tests/ cannot reach
# `Engine::testing_insert_privileged_fixture`,
# `Engine::backend_for_test`, or the WAIT envelope-cache plumbing.
benten-engine = { path = "../benten-engine", features = ["test-helpers"] }

[[bench]]
name = "ten_node_handler"
harness = false

[[bench]]
name = "multiplicative_budget_overhead"
harness = false

[[bench]]
name = "wait_suspend_resume_latency"
harness = false

[[bench]]
name = "transform_expression_latency"
harness = false
