[package]
name = "benten-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage abstraction (KVBackend trait) and redb implementation for the Benten graph engine."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness so `cargo bench --workspace`
# passes Criterion CLI flags through without libtest rejecting them. See
# benten-core/Cargo.toml for the longer rationale.
bench = false

[features]
# `test-fixtures` gates the `write-canonical-and-exit` binary target so a
# downstream `cargo install benten-graph --no-default-features` does not
# pay the compile-time cost of a test-only fixture. The feature is
# default-enabled so `cargo test`, `cargo nextest run --workspace`, and
# every developer workflow continue to build the bin without ceremony;
# publishers who want the library-only subset opt out explicitly.
#
# Closure of Named Compromise #7 (`[[bin]]` required-features gating).
default = ["test-fixtures"]
test-fixtures = []

[dependencies]
benten-core = { path = "../benten-core" }
benten-errors = { workspace = true }
redb = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
# Cross-process graph integration test (`d2_cross_process_graph.rs`) opens
# the engine to round-trip a persisted node. Dev-dep cycle is safe.
benten-engine = { path = "../benten-engine" }

[[bin]]
# Test-fixture binary used by d2_cross_process_graph.rs to prove PID
# separation. Writes the canonical fixture node to the path given in
# argv[1] then exits. Kept lean so the spawn cost on `cargo test` is
# tolerable. CARGO_BIN_EXE_write-canonical-and-exit is resolved by the
# test via the `env!()` macro.
name = "write-canonical-and-exit"
path = "bin/write_canonical_and_exit.rs"
# `required-features` guard keeps the binary out of `cargo install
# benten-graph --no-default-features` (Named Compromise #7 closure).
# `test = false` / `bench = false` keep the bin out of `cargo test` /
# `cargo bench` target discovery.
required-features = ["test-fixtures"]
test = false
bench = false

[[bench]]
name = "get_create_node"
harness = false

[[bench]]
name = "durability_modes"
harness = false

[[bench]]
name = "concurrent_writers"
harness = false

[[bench]]
name = "multi_mb_roundtrip"
harness = false
